--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@angular/router": "^17.0.2",
     "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.7",
+    "@capacitor/camera": "^5.0.9",
     "@capacitor/core": "5.6.0",
+    "@capacitor/filesystem": "^5.2.1",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/ios": "5.6.0",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/network": "^5.0.7",
+    "@capacitor/preferences": "^5.0.7",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.5.0",
     "@ionic/pwa-elements": "^3.2.2",
